fuel-tx/src/transaction/types/input/snapshots/fuel_tx__transaction__types__input__snapshot_tests__tx_with_signed_message.snap
---
source: fuel-tx/src/transaction/types/input/snapshot_tests.rs
expression: hex
---
00000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000010000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000002010101010101010101010101010101010101010101010101010101010101010102020202020202020202020202020202020202020202020202020202020202020303030303030303030303030303030303030303030303030303030303030303000000000000000400000000000000050000000000000006000000000000000a0000000000000000000000000000000007070707070707070707000000000000
