fuel-tx/src/transaction/types/input/snapshots/fuel_tx__transaction__types__input__snapshot_tests__tx_with_signed_message_coin_postcard.snap
---
source: fuel-tx/src/transaction/types/input/snapshot_tests.rs
expression: hex
---
0000000000000000000000000000000000000000000000000000000000000000000000003f0601e8077bc0843dc80300010302020202020202020202020202020202020202020202020202020202020202020303030303030303030303030303030303030303030303030303030303030303040505050505050505050505050505050505050505050505050505050505050505060000
