fuel-tx/src/transaction/types/input/snapshots/fuel_tx__transaction__types__input__snapshot_tests__tx_with_signed_message_data_json.snap
---
source: fuel-tx/src/transaction/types/input/snapshot_tests.rs
expression: json
snapshot_kind: text
---
{
  "Script": {
    "body": {
      "script_gas_limit": 0,
      "receipts_root": "0000000000000000000000000000000000000000000000000000000000000000",
      "script": [],
      "script_data": []
    },
    "policies": {
      "bits": "Tip | WitnessLimit | Maturity | MaxFee | Expiration",
      "values": [
        1,
        1000,
        123,
        1000000,
        456
      ]
    },
    "inputs": [
      {
        "MessageDataSigned": {
          "sender": "0202020202020202020202020202020202020202020202020202020202020202",
          "recipient": "0303030303030303030303030303030303030303030303030303030303030303",
          "amount": 4,
          "nonce": "0505050505050505050505050505050505050505050505050505050505050505",
          "witness_index": 6,
          "predicate_gas_used": null,
          "data": [
            7,
            7,
            7,
            7,
            7,
            7,
            7,
            7,
            7,
            7
          ],
          "predicate": null,
          "predicate_data": null
        }
      }
    ],
    "outputs": [],
    "witnesses": []
  }
}
